Ingress/fanout/fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: web2
            port: 
              number: 8080
